chore: add deploy ci and prod docker file

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,15 +2,10 @@
 version: '3'
 services:
   strapi:
-    image: node:16
+    image: mystrapi:latest
     restart: unless-stopped
     env_file: .env
     working_dir: /opt/app
-    command: >
-      /bin/sh -c "
-        yarn install
-        yarn dev
-      "
     environment:
       DATABASE_CLIENT: postgres
       DATABASE_HOST: strapiDB
@@ -21,9 +16,7 @@ services:
       JWT_SECRET: ${JWT_SECRET}
       ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
       APP_KEYS: ${APP_KEYS}
-      NODE_ENV: development
-    volumes:
-      - .:/opt/app
+      NODE_ENV: production
     ports:
       - '${PORT}:1337'
     networks:
@@ -41,8 +34,7 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_DB: strapi
     volumes:
-      - strapi-data:/var/lib/postgresql/data/ #using a volume
-      #- ./data:/var/lib/postgresql/data/ # if you want to use a bind folder
+      - strapi-data:/var/lib/postgresql/data/
     networks:
       - strapi
 
