--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "toki-website-cms",
+  "name": "toki-website-strapi-cms",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
