--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-i18n": "4.8.2",
     "@strapi/plugin-users-permissions": "4.8.2",
     "@strapi/strapi": "4.8.2",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "strapi-plugin-populate-deep": "^2.0.0"
   },
   "author": {
     "name": "A Strapi developer"
