--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@strapi/plugin-graphql": "4.8.2",
     "@strapi/plugin-i18n": "4.8.2",
     "@strapi/plugin-users-permissions": "4.8.2",
+    "@strapi/provider-upload-local": "^4.8.2",
     "@strapi/strapi": "4.8.2",
     "pg": "^8.10.0",
-    "strapi-plugin-populate-deep": "^2.0.0"
+    "strapi-plugin-populate-deep": "^2.0.0",
+    "strapi-provider-firebase-storage": "^1.0.3"
   },
   "author": {
     "name": "A Strapi developer"
