--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@strapi/plugin-color-picker": "^4.8.2",
     "@strapi/plugin-documentation": "4.8.2",
     "@strapi/plugin-graphql": "4.8.2",
     "@strapi/plugin-i18n": "4.8.2",
